# hawk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  git-auto.sh  main.c
include/: hawk.h  hawk_error.h  hawk_log.h  hawk_monitor.h  hawk_parser.h  hawk_signal_handler.h
rough_codes/: ep.c  epoll.c  exec  file.c  ino.c  input.txt  main.c  test.c  test.txt
src/: hawk_log.c  hawk_monitor.c  hawk_parser.c  main.c
